Show access level of bug notes ([private] label)

--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/swing/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/swing/Bundle.properties
@@ -1,3 +1,4 @@
 NoteDisplay.reporterLabel.text=reporter
 NoteDisplay.submitDateLabel.text=XXXX-XX-XX XX:XX
 NoteDisplay.editDateLabel.text=edited on: XXXX-XX-XX XX:XX
+NoteDisplay.privateLabel.text=[private]
