--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         </developer>
     </developers>
 
+    <scm>
+        <connection>scm:git:https://github.com/matthiasblaesing/netbeans-mantis-integration.git</connection>
+        <developerConnection>scm:git:git@github.com:matthiasblaesing/netbeans-mantis-integration.git</developerConnection>
+        <url>https://github.com/matthiasblaesing/netbeans-mantis-integration</url>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.run.params.ide/>
@@ -222,6 +228,12 @@
                     <!-- to have the jar plugin pickup the nbm generated manifest -->
                     <useDefaultManifestFile>true</useDefaultManifestFile>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.1</version>
             </plugin>
         </plugins>
     </build>
