--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                 <version>3.8.1</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <author>Matthias Bläsing</author>
                     <verifyRuntime>warn</verifyRuntime>
                     <moduleDependencies>
                         <dependency>
@@ -233,6 +234,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.1</version>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
