Provide a sensible category (same as bugzilla) for display in plugin category
Suggestion from ent38 on http://plugins.netbeans.org/plugin/45919/mantisintegration

--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/Bundle.properties
@@ -2,6 +2,6 @@
 #OpenIDE-Module-Name=
 #OpenIDE-Module-Short-Description=
 #OpenIDE-Module-Long-Description=
-#OpenIDE-Module-Display-Category=
+OpenIDE-Module-Display-Category=Base IDE
 LBL_ConnectorName=Mantis
 LBL_ConnectorTooltip=MantisBT Integration
