--- a/pom.xml
+++ b/pom.xml
@@ -30,17 +30,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.run.params.ide />
         <netbeans.run.params>${netbeans.run.params.ide}</netbeans.run.params>
-        <!-- RELEASE721 -->
-        <!-- RELEASE73-BETA2 -->
-        <mantisintegration.nbtarget>RELEASE721</mantisintegration.nbtarget>
-        <!-- 7.2.1 => 201210100934 -->
-        <!-- 7.3-BETA2 => 201211062253 -->
-        <mantisintegration.specver.swingx>201210100934</mantisintegration.specver.swingx>
+        <mantisintegration.nbtarget>RELEASE72</mantisintegration.nbtarget>
         <mantisintegration.specver.bugtracking>201210100934</mantisintegration.specver.bugtracking>
-        <mantisintegration.specver.jaxws21>201210100934</mantisintegration.specver.jaxws21>
-        <!-- 7.2.1 => 1.1.0 -->
-        <!-- 7.3-BETA2 => 1.1.1 -->
-        <mantisintegration.specver.commons.logging>1.1.0</mantisintegration.specver.commons.logging>
     </properties>
 
     <repositories>
@@ -89,11 +80,6 @@
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-windows</artifactId>
-            <version>${mantisintegration.nbtarget}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.netbeans.modules</groupId>
-            <artifactId>org-netbeans-libs-swingx</artifactId>
             <version>${mantisintegration.nbtarget}</version>
         </dependency>
         <dependency>
@@ -148,6 +134,11 @@
             <artifactId>axis-wsdl4j</artifactId>
             <version>1.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.swinglabs.swingx</groupId>
+            <artifactId>swingx-all</artifactId>
+            <version>1.6.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -180,19 +171,9 @@
                     <verifyRuntime>warn</verifyRuntime>
                     <moduleDependencies>
                         <dependency>
-                            <id>org.netbeans.modules:org-netbeans-libs-swingx</id>
-                            <type>impl</type>
-                            <explicitValue>org.netbeans.libs.swingx/1 = ${mantisintegration.specver.swingx}</explicitValue>
-                        </dependency>
-                        <dependency>
                             <id>org.netbeans.modules:org-netbeans-modules-bugtracking</id>
                             <type>impl</type>
                             <explicitValue>org.netbeans.modules.bugtracking = ${mantisintegration.specver.bugtracking}</explicitValue>
-                        </dependency>
-                        <dependency>
-                            <id>org.netbeans.modules:org-netbeans-libs-commons_logging</id>
-                            <type>impl</type>
-                            <explicitValue>org.apache.commons.logging = ${mantisintegration.specver.commons.logging}</explicitValue>
                         </dependency>
                     </moduleDependencies>
                     <licenseName>Apache License, Version 2.0 (+additional Information)</licenseName>
