First part of "query saving" - there are several questions open, but basic support is in place

--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/query/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/query/Bundle.properties
@@ -23,3 +23,7 @@ MantisQueryPanel.matchTypeLabel.text=Match type:
 MantisQueryPanel.summaryTextField.text=
 MantisQueryPanel.jLabel1.text=Server side filter:
 MantisQueryPanel.jLabel2.text=Client side filter:
+MantisQueryPanel.saveQueryButton.text=Save Query
+MantisQueryPanel.saveQueryButton.actionCommand=saveQuery
+MantisQueryPanel.deleteQueryLinkButton.actionCommand=deleteQuery
+MantisQueryPanel.deleteQueryLinkButton.text=Delete Query
