Initial implementation of timetracking feature

--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/issue/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/issue/Bundle.properties
@@ -56,3 +56,5 @@ AddTagDialog.closeButton.text=Close
 AddTagDialog.title=Add relationship
 AddTagDialog.okButton.text=Add
 AddTagDialog.tagsLabel.text=New Tag(s):
+MantisIssuePanel.timetrackLabel.text=Time:
+MantisIssuePanel.timetrackInput.text=00:00
