Implement  Option to change versions (product, target, fix) for issue - inspired by changes from wklaczynski

--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/issue/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/issue/Bundle.properties
@@ -58,3 +58,9 @@ AddTagDialog.okButton.text=Add
 AddTagDialog.tagsLabel.text=New Tag(s):
 MantisIssuePanel.timetrackLabel.text=Time:
 MantisIssuePanel.timetrackInput.text=00:00
+MantisIssuePanel.targetVersionLabel.toolTipText=
+MantisIssuePanel.targetVersionLabel.text=Target Version:
+MantisIssuePanel.versionLabel.toolTipText=
+MantisIssuePanel.versionLabel.text=Product Version:
+MantisIssuePanel.fixVersionLabel.toolTipText=
+MantisIssuePanel.fixVersionLabel.text=Fixed in Version:
