--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>eu.doppel_helix.netbeans</groupId>
     <artifactId>MantisIntegration</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>nbm</packaging>
 
     <name>MantisIntegration</name>
@@ -192,7 +192,7 @@
                         <configuration>
                             <target>
                                 <ant dir="." antfile="ant.xml" target="addDependencyToManifest"> 
-                                    <property name="dependency" value="org.apache.commons.logging > 1.1.1" />
+                                    <property name="dependency" value="org.apache.commons.logging &gt; 1.1.1" />
                                 </ant>                                
                             </target>
                         </configuration>
