--- a/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/query/Bundle.properties
+++ b/src/main/resources/eu/doppel_helix/netbeans/mantisintegration/query/Bundle.properties
@@ -27,3 +27,6 @@ MantisQueryPanel.saveQueryButton.text=Save Query
 MantisQueryPanel.saveQueryButton.actionCommand=saveQuery
 MantisQueryPanel.deleteQueryLinkButton.actionCommand=deleteQuery
 MantisQueryPanel.deleteQueryLinkButton.text=Delete Query
+MantisQueryPanel.menuOpenIssue=Open Issue
+MantisQueryPanel.menuMarkAsRead=Mark as read
+MantisQueryPanel.menuMarkAsUnRead=Mark as unread
